<resources>
    <string name="app_name">Embibe</string>
    <string name="embibe_helps_you_score_higher">Embibe helps you\n Score Higher!</string>
    <string name="app_logo_goes_here">App Logo Goes Here</string>
    <string name="sign_in_text">Please Sign-in and access your\n account</string>
    <string name="login_with_your_account">Login to your account</string>
    <string name="email_or_number">Your Username</string>
    <string name="email">Email</string>
    <string name="your_password">Your Password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="submit">Submit</string>
    <string name="radiobutton">RadioButton</string>
    <string name="Next">Next</string>
    <string name="checkbox">Checkbox</string>
    <string name="time_remaining">Time Remaining: %1$s</string>
    <string name="time_finish">Time Elasped!</string>
    <string name="logout">Logout</string>
    <string name="visit_developer">Visit Developer</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="scorecard">Scorecard</string>
    <string name="logout_msg">Are you sure you want to Logout?</string>
    <string name="alert">Alert</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="upcoming_test">Upcoming Test</string>
    <string name="conducted_test">Conducted Test</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="help_toast">"1.   Enter your name for the quiz.

 2.   Enter your valid mail address.
        eg:   abc@xyz.com

 3.   Now set your password for
        security purpose.

              Enjoy the app! ☺</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="prev">Prev</string>
    <string name="review">Review</string>
    <string name="action_sign_in">Login</string>

    <string-array name="theme_array">
        <item>Voilet</item>
        <item>Purple</item>
        <item>Voilet</item>
    </string-array>
</resources>
