<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scorecard"
            android:icon="@drawable/scorecard_drwaer"
            android:title="@string/scorecard" />
        <item
            android:id="@+id/nav_Setting"
            android:icon="@drawable/setting_drawer"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_drawer"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/feedback_drawer"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_Help"
                android:icon="@drawable/help_drawer"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/about_us_drawer"
                android:title="@string/visit_developer" />
        </menu>
    </item>
    <item
        android:id="@+id/log_out"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

</menu>
