<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/login_with_your_account"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_login_bg"
                android:fontFamily="@font/open_sans"
                android:hint="@string/email_or_number"
                android:inputType="text"
                android:padding="15dp"
                android:text="mahi"
                android:textColorHint="@color/login_text_gray"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_login_bg"
                android:fontFamily="@font/open_sans"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:text="123456"
                android:textColorHint="@color/login_text_gray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:paddingBottom="10dp"
                android:paddingEnd="3dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/forget_password"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/sign_in_btn_bg"
                android:gravity="center"
                android:text="@string/sign_in"
                android:fontFamily="@font/open_sans_semibold"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/help"
                android:gravity="center"
                android:onClick="showHelp"
                android:padding="10dp"
                android:text="@string/help"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>